--- a/ClientInformation/ClientInformation.csproj
+++ b/ClientInformation/ClientInformation.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>ClientSearch.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper.cs" />
+    <Compile Include="Patient.cs" />
     <Compile Include="PatientInformation.cs">
       <SubType>Form</SubType>
     </Compile>
