--- a/ClientInformation/ClientInformation.csproj
+++ b/ClientInformation/ClientInformation.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Breed.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="ClientInformation.cs">
       <SubType>Form</SubType>
@@ -75,6 +76,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sex.cs" />
+    <Compile Include="Species.cs" />
     <EmbeddedResource Include="ClientInformation.resx">
       <DependentUpon>ClientInformation.cs</DependentUpon>
     </EmbeddedResource>
