--- a/ClientInformation/ClientInformation.csproj
+++ b/ClientInformation/ClientInformation.csproj
@@ -74,6 +74,12 @@
     <Compile Include="PatientInformation.Designer.cs">
       <DependentUpon>PatientInformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Patient_List.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Patient_List.Designer.cs">
+      <DependentUpon>Form_Patient_List.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sex.cs" />
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PatientInformation.resx">
       <DependentUpon>PatientInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Patient_List.resx">
+      <DependentUpon>Form_Patient_List.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
