--- a/ClientInformation/ClientInformation.csproj
+++ b/ClientInformation/ClientInformation.csproj
@@ -66,6 +66,12 @@
     <Compile Include="ClientSearch.Designer.cs">
       <DependentUpon>ClientSearch.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Client_Information.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Client_Information.Designer.cs">
+      <DependentUpon>Form_Client_Information.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="PatientInformation.cs">
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ClientSearch.resx">
       <DependentUpon>ClientSearch.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Client_Information.resx">
+      <DependentUpon>Form_Client_Information.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PatientInformation.resx">
       <DependentUpon>PatientInformation.cs</DependentUpon>
